# ConfigurableOptimizer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.html  README.md  baseprofile.html  benchsuite.py  benchsuite_doc.html  dartsprofile.html  discreteprofile.html  drnasprofile.html  experiment.html  gdasprofile.html  genindex.html  index.html  objects.inv  profiles.html  pyproject.toml  reinmaxprofile.html  search.html  searchindex.js  slurm_run.sh  snasprofile.html
_sources/: README.md.txt  baseprofile.rst.txt  benchsuite_doc.md.txt  drnasprofile.rst.txt  experiment.rst.txt  gdasprofile.rst.txt  index.rst.txt
analysis/: LoRA-RDARTS-Analysis.ipynb
copycon/: config.cfg  copycon.cfg  copycon.sh  install.sh  launch.py  launch_model_train.py  launch_supernet_search.py  rerun_crashed_jobs.sh  run_all.sh  run_deep_searches.sh  run_exp.py  run_supernet_search.py
docs/: Makefile
examples/: demo.py  demo_advanced.py  demo_light.py  demo_taskonomy.py  example_synthetic.py  examples_lora.py  experiment_drnas.py  experiment_example.py  experiment_snas.py  get_genotype_from_log.py  searchspace.py  train_synthetic_genotype.py
notebooks/: CompileDataframeOfModelTrainResults.ipynb  Fetch Best Runs.ipynb  FinalPlots.ipynb  GenLatexTablesOfModelTrain.ipynb  GenModelTrainLaunchCmdsForBestArchs.ipynb  GenSupernetLaunchCmds.ipynb  GenSupernetLaunchCmdsForCrashedJobs.ipynb  GenerateLaunchCommands.ipynb  SeeRunningJobs.ipynb  SummarizeJobsStatus.ipynb
results/: model_trains_full.csv
scripts/: darts_runner.py  download_taskonomy.sh  random_search.py  run_with_cs.py  (+1 more)
(+299 files in other folders)
