[project]
name = "configurableoptimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configspace",
    "fvcore",
    "gdown>=5.2.0",
    "numpy",
    "protobuf",
    "reinmax",
    "scikit-image",
    "seaborn",
    "thop",
    "torch",
    "torchvision",
    "wandb",
]

[project.optional-dependencies]
pytest = []

[dependency-groups]
test = []
tests = [
    "pytest-cases>=3.8.6",
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
]
dev = [
    "black>=24.10.0",
    "commitizen>=4.1.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.0",
]
benchmark = [
    "click>=8.1.8",
    "cython>=3.0.11",
    "fasteners>=0.19",
    "gdown>=5.2.0",
    "imblearn>=0.0",
    "ipython>=8.31.0",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "nas-bench-201>=2.1",
    "netifaces>=0.11.0",
    "pandas>=2.2.3",
    "pathvalidate>=3.2.3",
    "pillow>=11.1.0",
    "psutil>=6.1.1",
    "pynisher<0.7.0",
    "pyro4>=4.82",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "serpent>=1.41",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.4",
    "timm>=1.0.13",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]
